# ystring

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  codecov.yml  gocoverage.sh
CMakeModules/: CodeCoverage.cmake
example/: CMakeLists.txt
example/simple/: ystr.cpp
ext/mz/: time.h
include/mz/: ystring.h
include_extra/: catch.hpp
include_extra/mz/: time.h
test/: CMakeLists.txt  main.cpp  simple.h  special.h
test/basic/: ystr_test.cpp
test/simple/: simple.cpp
